# Hobbes-Take-Home

./: README.md  demo.sh  pyproject.toml
agent/: __init__.py  __main__.py  changelog.py  cli.py  confidence.py  config.py  domains.py  extract.py  inspect_cmd.py  llm.py  merge.py  models.py  paths.py  prompts.py  render.py  sources.py  working.py
agent/chat/: budget.py  intent.py  respond.py  select.py  session.py  tools.py
agent/ingest/: files.py  gap_closure.py  pipeline.py  url.py
company_memory_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
fixtures/: make_contradiction_pdf.py
tests/: test_merge_fact.py
